thêm chức năng sửa xóa người dùng và lưu trữ người đang dùng trong cookie

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.90.1",
     "@types/pg": "^8.15.6",
     "date-fns": "^4.1.0",
     "dotenv": "^17.2.3",
